--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sqlite3": "^5.1.7"
   },
   "scripts": {
-    "start": "node server.js"
+  "start": "node server.js",
+  "dev": "nodemon server.js"
   },
   "name": "matchadesign",
   "version": "1.0.0",
